; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tlc-new.c_vkext_write.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tlc-new.c_vkext_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_CREAT = common dso_local global i32 0, align 4
@O_WRONLY = common dso_local global i32 0, align 4
@O_TRUNC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vkext_write(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = load i32, i32* @O_CREAT, align 4
  %6 = load i32, i32* @O_WRONLY, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @O_TRUNC, align 4
  %9 = or i32 %7, %8
  %10 = call i32 @open(i8* %4, i32 %9, i32 416)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = icmp sge i32 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @write_types(i32 %15)
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @close(i32 %17)
  ret i32 0
}

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @write_types(i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
